@@ -62,13 +62,21 @@ int main(int argc,char** argv) {
  
   // Construct the default run manager
 #ifdef G4MULTITHREADED
-    G4MTRunManager* runManager = new G4MTRunManager;
-    G4int nThreads = G4Threading::G4GetNumberOfCores();
-    if (argc==3) nThreads = G4UIcommand::ConvertToInt(argv[2]);
-    runManager->SetNumberOfThreads(nThreads);
+  G4MTRunManager* runManager = new G4MTRunManager;
+  G4int nThreads = 2;
+  if (argc==3) {
+    if(G4String(argv[2]) == "NMAX") { 
+      nThreads = G4Threading::G4GetNumberOfCores();
+    } else {
+      nThreads = G4UIcommand::ConvertToInt(argv[2]);
+    } 
+  }
+  if (nThreads > 0) { runManager->SetNumberOfThreads(nThreads); }
+  G4cout << "===== TestEm3 is started with " 
+         <<  runManager->GetNumberOfThreads() << " threads =====" << G4endl;
 #else
-    G4VSteppingVerbose::SetInstance(new SteppingVerbose);
-    G4RunManager* runManager = new G4RunManager;
+  G4VSteppingVerbose::SetInstance(new SteppingVerbose);
+  G4RunManager* runManager = new G4RunManager;
 #endif  
 
   // set mandatory initialization classes
