@@ -5,6 +5,7 @@
 #
 # Lead-liquidArgon 50 layers; electron 1 GeV
 #
+/control/cout/ignoreThreadsExcept 0
 /control/verbose 2
 /run/verbose 2
 #
